<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background_white"
    android:minHeight="340dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/google_cards_background_top" >

        <ImageView
            android:id="@+id/list_item_google_cards_social_profile_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="4dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <com.tspro.android.beatifulgirl.font.RobotoTextView
                android:id="@+id/list_item_google_cards_social_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="\@TruongLX"
                android:textColor="@color/main_color_grey_600"
                android:textSize="16sp"
                app:typeface="robotoLight" />

            <com.tspro.android.beatifulgirl.font.RobotoTextView
                android:id="@+id/list_item_google_cards_social_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="from VietNam"
                android:textColor="@color/main_color_grey_400"
                android:textSize="12sp"
                app:typeface="robotoLight" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/list_item_google_cards_social_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="1"
        android:contentDescription="@string/cd_main_image"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="right"
        android:orientation="vertical"
        android:background="@drawable/google_cards_background_bottom"  >

        <com.tspro.android.beatifulgirl.font.RobotoTextView
            android:id="@+id/list_item_google_cards_social_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:maxLines="2"
            android:text="@string/transition_image"
            android:textColor="@color/material_blue_grey_700"
            android:textSize="14sp"
            app:typeface="robotoRegular" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_color_500" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_pink_700"
            android:gravity="right">
            <com.tspro.android.beatifulgirl.font.MaterialDesignIconsTextView
                android:id="@+id/list_item_google_cards_social_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/material_icon_like"
                android:textColor="@android:color/white"
                android:textSize="20dp" />


            <com.tspro.android.beatifulgirl.font.MaterialDesignIconsTextView
                android:id="@+id/list_item_google_cards_social_follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/material_icon_bookmark"
                android:textColor="@android:color/white"
                android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>